- minor fix - js file has been linked to hompage correctly - adjusted font sizes on mobiles - remove unnecessary items from root css

--- a/home/css/index.css
+++ b/home/css/index.css
@@ -23,6 +23,6 @@ body {
 	.content {
 		left: 20px;
 		padding-right: 20px;
-		font-size: 20px;
+		font-size: 24px;
 	}
 }
